--- a/index.html
+++ b/index.html
@@ -4,19 +4,29 @@
     <meta charset="utf-8">
     <title>Revolut website</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="/css/master.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
   </head>
   <body>
+    <div class="cookies">
+      <div class="">
+        <p>We use  🍪 cookies to personalise your experience on Revolut.Learn more</p>
+      </div>
+      <div class="">
+        <span>Manage Cookies</span>
+        <span><a class="fakecookie" href="#">Accept</a></span>
+      </div>
+    </div>
     <header>
       <nav>
         <div class="logo">
           <a href="#"> <img src="assets/img/logo_revolut.jpg" alt="logo">  </a>
           <a href="#">PERSONAL</a>
           <a href="#">BUSINESS</a>
+
         </div>
 
-        <div >
+
+        <div class="navright">
           <ul class="navigationmenu">
             <li class="dropdown"> <a href="#">Pricing</a>
               <ul class="dropdowncontent">
@@ -76,13 +86,20 @@
                 <li><a href="#">Link1</a></li>
               </ul>
             </li>
+            <li><a class="app" href="#">Get the App</a></li>
           </ul>
+
+
         </div>
-        <div class="menu-toggle"><i class="fas fa-bars"></i></div>
+        <div class="menu-toggle"><i class="fas fa-bars"></i>
+
+        </div>
         </nav>
 
 
     </header>
+
+
 
 
 
