aggiunta 2 sezioni e img

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Revolut website</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
   </head>
@@ -20,13 +21,16 @@
       <nav>
         <div class="logo">
           <a href="#"> <img src="assets/img/logo_revolut.jpg" alt="logo">  </a>
-          <a href="#">PERSONAL</a>
-          <a href="#">BUSINESS</a>
+
+        </div>
+        <div class="">
 
         </div>
 
-
         <div class="navright">
+          <a href="#">PERSONAL</a>
+          <a href="#">BUSINESS</a>
+
           <ul class="navigationmenu">
             <li class="dropdown"> <a href="#">Pricing</a>
               <ul class="dropdowncontent">
@@ -86,18 +90,86 @@
                 <li><a href="#">Link1</a></li>
               </ul>
             </li>
-            <li><a class="app" href="#">Get the App</a></li>
+            <li class="contapp"><a class="app" href="#">Get the App</a></li>
           </ul>
 
 
         </div>
         <div class="menu-toggle"><i class="fas fa-bars"></i>
-
         </div>
+        <!-- <div class="menu-toggle"><i class="fas fa-times"></i>
+        </div> -->
+
         </nav>
 
 
     </header>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-10 col-sm-5">
+          <div>
+            <h2 class="title-1-section">A Radically Better Account</h2>
+            <p>Banks will charge you when you spend or transfer money abroad.
+               We're not about hidden fees or rubbish exchange rates,
+               and that's why 8M+ people already use Revolut
+             </p>
+
+             <div class="">
+               <select>
+                <option value="volvo">+34</option>
+                <option value="saab">+35</option>
+                <option value="mercedes">+36</option>
+                <option value="audi">+37</option>
+              </select>
+              <span><input type="text" name="" value="" placeholder="Phone number"></span>
+              <span> <button type="button" name="button">Get Started</button> </span>
+           </div>
+
+          </div>
+        </div>
+        <div class="col-10 col-sm-5">
+          <div>
+            <img src="assets/img/iphoneslider.PNG" alt="">
+
+          </div>
+        </div>
+      </div>
+
+      <div class="row sezione-2">
+        <div class="col-sm-5">
+          <h2>Manage your money</h2>
+          <h6>OPEN AN ACCOUNT IN MINUTES</h6>
+          <p>Opening an account with us takes just minutes,
+             and because we don’t believe in branches,
+              you can set one up directly from your phone
+          </p>
+
+          <h5>BUILT-IN BUDGETING</h5>
+          <p> We’ll show you exactly where your money is going each month,
+            and even let you set up monthly budgets for things like restaurants and groceries.
+          </p>
+
+          <h5> STASH AWAY YOUR SPARE CHANGE</h6>
+          <p> Round up every card payment to the nearest whole number,
+            and we'll stash your spare change away for you to put towards your goals
+          </p>
+
+          <h5>INSTANT SPENDING NOTIFICATIONS</h5>
+          <p> We’ll send you a notification the second you make a payment with your card,
+            even before the receipt has finished printing.
+            Revolut app screen
+          </p>
+
+
+        </div>
+        <div class="col-sm-5">
+
+        </div>
+      </div>
+    </div>
+
+
 
 
 
