--- a/index.html
+++ b/index.html
@@ -21,17 +21,13 @@
       <nav>
         <div class="logo">
           <a href="#"> <img src="assets/img/logo_revolut.jpg" alt="logo">  </a>
-
-        </div>
-        <div class="">
-
         </div>
 
         <div class="navright">
-          <a href="#">PERSONAL</a>
-          <a href="#">BUSINESS</a>
 
           <ul class="navigationmenu">
+            <li><a href="#">PERSONAL</a></li>
+            <li><a class="mrg-right" href="#">BUSINESS</a></li>
             <li class="dropdown"> <a href="#">Pricing</a>
               <ul class="dropdowncontent">
                 <li><a href="#">Link1</a></li>
@@ -90,7 +86,7 @@
                 <li><a href="#">Link1</a></li>
               </ul>
             </li>
-            <li class="contapp"><a class="app" href="#">Get the App</a></li>
+            <li class="contapp"><button class="app" href="#">Get the App</button></li>
           </ul>
 
 
@@ -105,9 +101,9 @@
 
     </header>
 
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-10 col-sm-5">
+        <div class="col-10 col-sm-5 offset-sm-1">
           <div>
             <h2 class="title-1-section">A Radically Better Account</h2>
             <p>Banks will charge you when you spend or transfer money abroad.
@@ -117,10 +113,10 @@
 
              <div class="">
                <select>
-                <option value="volvo">+34</option>
-                <option value="saab">+35</option>
-                <option value="mercedes">+36</option>
-                <option value="audi">+37</option>
+                <option value="">+34</option>
+                <option value="">+35</option>
+                <option value="">+36</option>
+                <option value="">+37</option>
               </select>
               <span><input type="text" name="" value="" placeholder="Phone number"></span>
               <span> <button type="button" name="button">Get Started</button> </span>
@@ -128,7 +124,7 @@
 
           </div>
         </div>
-        <div class="col-10 col-sm-5">
+        <div class="col-10 col-sm-4 offset-sm-1">
           <div>
             <img src="assets/img/iphoneslider.PNG" alt="">
 
@@ -137,7 +133,7 @@
       </div>
 
       <div class="row sezione-2">
-        <div class="col-sm-5">
+        <div class="col-sm-5 offset-sm-1">
           <h2>Manage your money</h2>
           <h6>OPEN AN ACCOUNT IN MINUTES</h6>
           <p>Opening an account with us takes just minutes,
@@ -167,14 +163,69 @@
 
         </div>
       </div>
-    </div>
+
+      <footer>
+        <div class="row">
+          <div class="col-4">
+            <img class="R" src="assets/img/R.png" alt="">
+            <a href="#">PERSONAL</a>
+            <a href="#">BUSINESS</a>
+          </div>
+
+          <div class="col-12 col-sm-6 col-md-2">
+            <ul>
+              <li><h6>ACCOUNT</h6></li>
+              <li>Standard</li>
+              <li>Premium</li>
+              <li>Metal</li>
+            </ul>
+          </div>
+
+          <div class="col-12 col-sm-6 col-md-2">
+            <ul>
+              <li><h6>PRODUCTS</h6></li>
+              <li>Premium</li>
+              <li>MetalNew</li>
+              <li>Money Transfers</li>
+              <li>Vaults</li>
+              <li>Budgeting</li>
+              <li>Perksbeta</li>
+              <li>Cryptocurrency</li>
+              <li>Mobile Phone Insurance</li>
+              <li>Overseas Medical Insurance</li>
+              <li>Open Banking API</li>
+              <li>Apple PayNew</li>
+              <li>DonationsNew</li>
+            </ul>
+          </div>
+
+          <div class="col-12 col-sm-6 col-md-2">
+            <ul>
+              <li><h6>COMPANY</h6></li>
+              <li>About</li>
+              <li>Blog</li>
+              <li>Careers</li>
+              <li>AffiliatesNew</li>
+              <li>InfluencersNew</li>
+              <li>Contac</li>
+            </ul>
+          </div>
+
+          <div class="col-12 col-sm-6 col-md-2">
+            <ul>
+              <li><h6>HELP</h6></li>
+              <li>Standard</li>
+              <li>Premium</li>
+              <li>Metal</li>
+            </ul>
+          </div>
 
 
+        </div>     <!-- finerow -->
 
 
-
-
-
+      </footer>
+    </div>  <!-- fine container -->
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
