cambio icona hamburger sul click di apertura e chiusura

--- a/index.html
+++ b/index.html
@@ -91,7 +91,10 @@
 
 
         </div>
-        <div class="menu-toggle"><i class="fas fa-bars"></i>
+        <div class="menu-toggle">
+          <i class="fas fa-bars hamburger visible"></i>
+          <i class="fas fa-times croce invisible"></i>
+
         </div>
         <!-- <div class="menu-toggle"><i class="fas fa-times"></i>
         </div> -->
